--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
   <link rel="stylesheet" href="assets/css/animsition.min.css">
   <link rel="stylesheet" href="assets/css/ionicons.min.css"> <!-- Resource style -->
   <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
+
+
+  <!-- LEAFLET MAP -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin="" />
+
+  <!-- LEAFLETJS -->
+  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
+
+
 </head>
 
 <body>
@@ -33,17 +42,15 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#main"><img src="assets/logos/logo.png" height="35" width="35" alt="Mu" /></a>
+            <!-- <a class="navbar-brand page-scroll" href="#main"><img src="assets/logos/logo.png" height="35" width="35" alt="Mu" /></a> -->
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li><a class="page-scroll" href="#main">Home</a></li>
-              <li><a class="page-scroll" href="#services">Services</a></li>
-              <li><a class="page-scroll" href="#features">Features</a></li>
-              <li><a class="page-scroll" href="#reviews">Reviews</a></li>
-              <li><a class="page-scroll" href="#pricing">Pricing</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a class="page-scroll" href="#main">Inicio</a></li>
+              <li><a class="page-scroll" href="#services">Mapa</a></li>
+              <li><a class="page-scroll" href="#features">Alianzas</a></li>
+              <li><a href="contact.html">Contacto</a></li>
             </ul>
           </div>
         </div>
@@ -52,19 +59,26 @@
 
     <div class="main" id="main">
       <!-- Main Section-->
-      <div class="jarallax">
-        <div class="text-center">
-          <div class="container">
-            <div class="hero-content">
-              <div class="col-md-8 col-md-offset-2 nopadding">
-                <h1 class="wow fadeInUp">Meet Destiny, the visonary landing Page.</h1>
-                <p class="wow fadeInUp" data-wow-delay="0.1s">
-                  Re-targeting your audience with competitive intelligence embedded <br class="hidden-xs"> in Destiny. See it in action and then believe.
-                </p>
-                <a class="btn btn-primary btn-action popup wow fadeInUp" data-wow-delay="0.2s" href="https://www.youtube.com/watch?v=6NC_ODHu5jg">Watch Intro</a>
+      <div class="app-sub">
+        <div class="container">
+          <div class="app-sub-inner">
+
+          <div class="col-md-7 col-sm-7 nopadding">
+            <div class="app-sub-content">
+              <h1 class="wow fadeInLeft" data-wow-delay="0s">Compartes tú, comparten todos</h1>
+              <p class="wow fadeInLeft" data-wow-delay="0.1s">
+                Ofrece todo lo que a ti te sobre pero que alguien más pueda necesitar debido a los problemas de escazes.
+              </p>
+              <div class="form wow fadeInLeft" data-wow-delay="0.3s">
+              <form class="subscribe-form wow zoomIn" action="contact.html" method="post" accept-charset="UTF-8" enctype="application/x-www-form-urlencoded" autocomplete="off" novalidate>
+              <input class="mail" type="email" name="email" placeholder="¿Qué puedes ofrecer?" autocomplete="off"><button class="btn btn-primary btn-action btn-fill">Donar</button>
+              </form>
+              <div class="success-message"></div>
+      			  <div class="error-message"></div>
               </div>
             </div>
           </div>
+        </div>
         </div>
       </div>
 
@@ -80,6 +94,7 @@
               </p>
             </div>
           </div>
+          <div id="mapa" style="height: 30em;" class="col-md-12 text-center"></div>
           <div class="col-md-12 text-center">
             <div class="services">
               <div class="col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
@@ -89,9 +104,7 @@
                 <div class="services-description">
                   <h1>Comida</h1>
                   <p>
-                    Id ius mutat gubergren, eros harum hendrerit ex eos,
-                    in quo vocibus inimicus gubergren.
-                    Experience, then believe.
+                    Cualquier tipo de alimentos y bebidas que puedas ofrecer ya sea para humanos o para mascotas.
                   </p>
                 </div>
               </div>
@@ -102,9 +115,7 @@
                 <div class="services-description">
                   <h1>Higiene</h1>
                   <p>
-                    Id ius mutat gubergren, eros harum hendrerit ex eos,
-                    in quo vocibus inimicus gubergren.
-                    Experience, then believe.
+                    Comparte productos y artículos de higiene personal y del hogar que puedan ser escasos en supermercados.
                   </p>
                 </div>
               </div>
@@ -115,9 +126,7 @@
                 <div class="services-description">
                   <h1>Salud</h1>
                   <p>
-                    Id ius mutat gubergren, eros harum hendrerit ex eos,
-                    in quo vocibus inimicus gubergren.
-                    Experience, then believe.
+                    Si cuentas con medicamentos sin receta que alguien más pudiera necesitar no dudes en ofrecerlos.
                   </p>
                 </div>
               </div>
@@ -132,22 +141,19 @@
         <div class="container">
           <div class="col-md-12 col-sm-12">
             <div class="pricing-intro">
-              <h1 class="wow fadeInUp" data-wow-delay="0s">Pickup the right pricing plan for you.</h1>
+              <h1 class="wow fadeInUp" data-wow-delay="0s">Encuentra lo que necesitas</h1>
               <p class="wow fadeInUp" data-wow-delay="0s">
-                Our plans are designed to meet the requirements of both beginners <br class="hidden-xs"> and players.
-                Get the right plan that suits you.
+                Estos negocios han realizado alianzas con nosotros para que puedas contar con alimentos, bebidas, farmacias a un menor costo.
               </p>
             </div>
 
             <div class="col-sm-3">
-              <img src="https://s-media-cache-ak0.pinimg.com/736x/27/f6/a4/27f6a438080212c22b1402ce71ccf1e5.jpg" class="img-responsive">
+              <img src="https://picsum.photos/300/200" class="img-responsive">
               <div class="table-left wow fadeInUp" data-wow-delay="0.2s">
                 <div class="pricing-details">
                   <h2>Restaurante Los Chabos</h2>
                   <ul>
-                    <li>First basic feature </li>
-                    <li>Second feature goes here</li>
-                    <li>Any other third feature</li>
+                    <li>Comida saludable y vegana</li>
                   </ul>
                   <button class="btn btn-primary btn-action btn-fill">Get Plan</button>
                 </div>
@@ -156,14 +162,12 @@
 
 
             <div class="col-sm-3">
-              <img src="https://s-media-cache-ak0.pinimg.com/736x/27/f6/a4/27f6a438080212c22b1402ce71ccf1e5.jpg" class="img-responsive">
+              <img src="https://picsum.photos/300/200" class="img-responsive">
               <div class="table-left wow fadeInUp" data-wow-delay="0.2s">
                 <div class="pricing-details">
                   <h2>Farmacia La Buena</h2>
                   <ul>
-                    <li>First basic feature </li>
-                    <li>Second feature goes here</li>
-                    <li>Any other third feature</li>
+                    <li>Salud e higiene.</li>
                   </ul>
                   <button class="btn btn-primary btn-action btn-fill">Get Plan</button>
                 </div>
@@ -172,14 +176,12 @@
 
 
             <div class="col-sm-3">
-              <img src="https://s-media-cache-ak0.pinimg.com/736x/27/f6/a4/27f6a438080212c22b1402ce71ccf1e5.jpg" class="img-responsive">
+              <img src="https://picsum.photos/300/200" class="img-responsive">
               <div class="table-left wow fadeInUp" data-wow-delay="0.2s">
                 <div class="pricing-details">
-                  <h2>Otro restaurante Buena onda</h2>
+                  <h2>Supersito Mi Oxxito</h2>
                   <ul>
-                    <li>First basic feature </li>
-                    <li>Second feature goes here</li>
-                    <li>Any other third feature</li>
+                    <li>Un poco de todo.</li>
                   </ul>
                   <button class="btn btn-primary btn-action btn-fill">Get Plan</button>
                 </div>
@@ -188,14 +190,12 @@
 
 
             <div class="col-sm-3">
-              <img src="https://s-media-cache-ak0.pinimg.com/736x/27/f6/a4/27f6a438080212c22b1402ce71ccf1e5.jpg" class="img-responsive">
+              <img src="https://picsum.photos/300/200" class="img-responsive">
               <div class="table-left wow fadeInUp" data-wow-delay="0.2s">
                 <div class="pricing-details">
                   <h2>La fondita bien</h2>
                   <ul>
-                    <li>First basic feature </li>
-                    <li>Second feature goes here</li>
-                    <li>Any other third feature</li>
+                    <li>Un poco de todo.</li>
                   </ul>
                   <button class="btn btn-primary btn-action btn-fill">Get Plan</button>
                 </div>
@@ -213,7 +213,7 @@
           <div class="col-sm-6">
             <div class="features-content wow fadeInLeft" data-wow-delay="0.2s">
               <h2>Mensaje motivador y de ánimo</h2>
-              <h4>Makes your everyday better.</h4>
+              <h4>¡Juntos a combatir la escazes!</h4>
               <p>
                 Just get the code and sit tight, you'll witness its power and performance in lead conversion.
                 Powerful and productive technology.
@@ -234,16 +234,11 @@
       <div class="footer no-color">
         <div class="container">
           <div class="col-md-12 text-center">
-            <img class="img-circle" src="assets/logos/logo.png" width="40" height="40" alt="" />
-            <ul class="footer-menu">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Features</a></li>
-              <li><a href="#">Privacy</a></li>
-            </ul>
+            <!-- <img class="img-circle" src="assets/logos/logo.png" width="40" height="40" alt="" /> -->
+
             <div class="footer-text">
               <p>
-                Copyright © 2016 Destiny Inc. All Rights Reserved.
+                Copyright © 2020 Hackatoncito
               </p>
             </div>
           </div>
@@ -261,6 +256,8 @@
 
     </div><!-- Main Section -->
   </div><!-- Wrapper-->
+
+  <script src="mapa-leaflet.js"></script>
 
   <!-- Jquery and Js Plugins -->
   <script type="text/javascript" src="assets/js/jquery-2.1.1.js"></script>
