--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
   <script src="mapa-leaflet.js"></script>
 
   <!-- Jquery and Js Plugins -->
-  <script type="text/javascript" src="assets/js/jquery-2.1.1.js"></script>
+  <!-- <script type="text/javascript" src="assets/js/jquery-2.1.1.js"></script> -->
+  <script type="text/javascript" src="assets/js/jquery-3.5.0.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/js/plugins.js"></script>
   <script type="text/javascript" src="assets/js/menu.js"></script>
